--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,6 +54,7 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.5.1'
     implementation 'androidx.paging:paging-common-ktx:3.1.1'
+    implementation 'androidx.paging:paging-runtime-ktx:3.1.1'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
@@ -69,6 +70,7 @@ dependencies {
     kapt "androidx.hilt:hilt-compiler:1.0.0"
     implementation("androidx.hilt:hilt-navigation-fragment:1.0.0")
 
+
     //Nav Component
     implementation 'androidx.navigation:navigation-fragment-ktx:2.5.1'
     implementation 'androidx.navigation:navigation-ui-ktx:2.5.1'
@@ -76,6 +78,7 @@ dependencies {
     //Room
     implementation "androidx.room:room-runtime:2.4.3"
     implementation "androidx.room:room-ktx:2.4.3"
+    implementation "androidx.room:room-paging:2.4.0-rc01"
     kapt "androidx.room:room-compiler:2.4.3"
 
     //ViewModel
